// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`editFile tool toolInfo should have correct tool definition 1`] = `
{
  "description": "Request to edit file contents using before/after text anchors with flexible operations. Supports multiple edit operations in a single call.",
  "examples": [
    {
      "description": "Replace content between two text anchors",
      "parameters": [
        {
          "name": "path",
          "value": "src/main.ts",
        },
        {
          "name": "operations",
          "value": {
            "after_text": "}",
            "before_text": "function oldFunction() {",
            "new_text": 
"
  return "new implementation";
"
,
          },
        },
      ],
    },
    {
      "description": "Insert at start of file",
      "parameters": [
        {
          "name": "path",
          "value": "src/header.ts",
        },
        {
          "name": "operations",
          "value": {
            "after_text": "export",
            "before_text": "<<<START_OF_FILE>>>",
            "new_text": 
"// File header comment
"
,
          },
        },
      ],
    },
    {
      "description": "Multiple operations in one call",
      "parameters": [
        {
          "name": "path",
          "value": "src/utils.ts",
        },
        {
          "name": "operations",
          "value": [
            {
              "after_text": "from "react"",
              "before_text": "import React",
              "new_text": ", { useState }",
            },
            {
              "after_text": "return (",
              "before_text": "function Component() {",
              "new_text": 
"
  const [state, setState] = useState(false);
  "
,
            },
          ],
        },
      ],
    },
  ],
  "name": "edit_file",
  "parameters": [
    {
      "description": "The path of the file to edit",
      "name": "path",
      "required": true,
      "usageValue": "File path here",
    },
    {
      "allowMultiple": true,
      "children": [
        {
          "description": "Text to find as the start anchor (use <<<START_OF_FILE>>> for file start)",
          "name": "before_text",
          "required": false,
          "usageValue": "Text before the edit location",
        },
        {
          "description": "Text to find as the end anchor (use <<<END_OF_FILE>>> for file end)",
          "name": "after_text",
          "required": false,
          "usageValue": "Text after the edit location",
        },
        {
          "description": "Text to replace the content between before_text and after_text",
          "name": "new_text",
          "required": true,
          "usageValue": "New text content",
        },
        {
          "description": "Optional line number hint for before_text location (1-based)",
          "name": "before_text_line_start",
          "required": false,
          "usageValue": "10",
        },
        {
          "description": "Optional line number hint for after_text location (1-based)",
          "name": "after_text_line_start",
          "required": false,
          "usageValue": "20",
        },
      ],
      "description": "Edit operation with before_text, after_text, new_text, and optional line range hints",
      "name": "operations",
      "required": true,
      "usageValue": "operations here",
    },
  ],
  "permissionLevel": 2,
}
`;

exports[`editFile tool handler should return error when provider lacks capabilities 1`] = `
{
  "message": "Not possible to edit file. Abort.",
  "type": "Error",
}
`;

exports[`editFile tool handler should return error when file not found 1`] = `
{
  "message": "<error><edit_file_path>missing.txt</edit_file_path><error_message>Either before_text or after_text must be specified</error_message></error>",
  "type": "Error",
}
`;

exports[`editFile tool handler should return error when no operations provided 1`] = `
{
  "message": "<error><edit_file_path>test.txt</edit_file_path><error_message>At least one edit operation is required</error_message></error>",
  "type": "Error",
}
`;

exports[`editFile tool handler should handle single operation successfully 1`] = `
{
  "message": "<edit_file_path>test.txt</edit_file_path>",
  "type": "Reply",
}
`;

exports[`editFile tool handler should handle multiple operations successfully 1`] = `
{
  "message": "<edit_file_path>test.ts</edit_file_path>",
  "type": "Reply",
}
`;

exports[`editFile tool handler should handle start of file marker 1`] = `
{
  "message": "<edit_file_path>test.ts</edit_file_path>",
  "type": "Reply",
}
`;

exports[`editFile tool handler should handle end of file marker 1`] = `
{
  "message": "<edit_file_path>test.ts</edit_file_path>",
  "type": "Reply",
}
`;

exports[`editFile tool handler should handle entire file replacement 1`] = `
{
  "message": "<edit_file_path>test.txt</edit_file_path>",
  "type": "Reply",
}
`;

exports[`editFile tool handler should return error when text not found 1`] = `
{
  "message": "<error><edit_file_path>test.txt</edit_file_path><error_message>Could not find text: missing</error_message></error>",
  "type": "Error",
}
`;

exports[`editFile tool handler should handle insert after before_text only 1`] = `
{
  "message": "<edit_file_path>test.txt</edit_file_path>",
  "type": "Reply",
}
`;

exports[`editFile tool handler should handle insert before after_text only 1`] = `
{
  "message": "<edit_file_path>test.txt</edit_file_path>",
  "type": "Reply",
}
`;
